--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                   <!-- Имя -->
                   <div class="name">
                      <div>Gamagina</div>
-                     <div>Alena</div>
+                     <div> Alena &#129392</div>
                   </div>
                   <div>
                      <div class="list"><span>age</span><span>:</span><span>35</span></div>
